--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Publish and Release
 
 on:
   push:
@@ -6,10 +6,10 @@ on:
       - v[0-9]+.[0-9]+
 
 jobs:
-  build-and-pushlish:
+  pushlish-and-release:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
 
     steps:
@@ -34,3 +34,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: ./gradlew inputfilter:publishReleasePublicationToGitHubPackagesRepository
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: inputfilter/build/outputs/aar/inputfilter-release.aar
